--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Visible HTML elements GO HERE -->
     <div id="all-contents">
         <nav>
-            <h1>THE KING OF THE STUDENT'S WEBSITE</h1>
+            <h1> COLYN'S DOMAIN</h1> <!--This is your title-->
             <ul id="nav-ul">
                 <li class="nav-li">
                     <a href="index.html">Link to Index</a>
@@ -31,9 +31,9 @@
                 <div id="interests">
                     <h3>Interests</h3>
                     <ul>
-                        <li>Thing1</li>
-                        <li>Thing2</li>
-                        <li>Thing3</li>
+                        <li>I love game's</li>
+                        <li>Writing</li>
+                        <li>And watching movies</li>
                     </ul>
                 </div>
             </div>
