--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,16 @@
     <body>
       <div id="all-contents">
         <nav>
-            <!-- Nav stuff here...-->
+            <h1>Colyn's projects </h1>
+                <ul id="nav-ul">
+                    <li class="nav-li">
+                        <a href="index.html">Link to Index</a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="portfolio.html">Link to Portfolio</a>
+                    </li>
+                </ul>
+    
         </nav>
         <main>
             <div class="content">
@@ -20,15 +29,6 @@
                 </ul>
             </div>
         </main>
-            <h1>Colyn's projects
-            <ul id="nav-ul">
-                <li class="nav-li">
-                    <a href="index.html">Link to Index</a>
-                </li>
-                <li class="nav-li">
-                    <a href="portfolio.html">Link to Portfolio</a>
-                </li>
-            </ul>
 
 
       </div>
