--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -5,87 +5,108 @@
 	<title>Bouncing Box</title>
 	<script src="jquery.min.js"></script>
 	<style>
-		.box {
+		.box, .box2 {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
 			font-size: 300%;
 			text-align: center;
 			user-select: none;
-			display: block;
+			display: Blue;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 140px;
 		}
-		.board{
+		.box {
+			background-color: rgb(255, 8, 0);    
+			background-image: url('https://i.pinimg.com/474x/81/65/57/81655773ff48e90beac97580a2bc8fa4.jpg');
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
+		.box2 {
+			background-color: rgb(11, 255, 64); /* Different color for second box */
+			background-image: url('https://art.pixilart.com/eeb2072a9987ecd.png');
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+		}
+		.board {
+			
 			height: 100vh;
-		}
+			background-image: url('https://wallpapers.com/images/hd/super-mario-background-vbep44x7ca67u2vn.jpg');
+			background-size: cover;
+			background-position: center;
+			background-repeat: no-repeat;
+		}   
 	</style>
-	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-
 </head>
 <body class="board">
-	<!-- HTML for the box -->
 	<div class="box">?</div>
-
+	<div class="box2">?</div> <!-- Second box -->
 	<script>
 		(function(){
 			'use strict'
-			/* global jQuery */
 
-			//////////////////////////////////////////////////////////////////
-			/////////////////// SETUP DO NOT DELETE //////////////////////////
-			//////////////////////////////////////////////////////////////////
-			
-			var box = jQuery('.box');	// reference to the HTML .box element
-			var board = jQuery('.board');	// reference to the HTML .board element
-			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var box = jQuery('.box');
+			var box2 = jQuery('.box2'); // Reference to the second box
+			var board = jQuery('.board');
+			var boardWidth = board.width();
 
-			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
-			
-			// Every time the box is clicked, call the handleBoxClick Function (see below)
-			box.on('click', handleBoxClick);
 
-			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			box.on('click', handleBoxClick);
+			box2.on('click', handleBoxClick2); // Event for second box
+
+			function moveBoxTo(box, newPositionX) {
 				box.css("left", newPositionX);
 			}
 
-			// changes the text displayed on the Box
-			function changeBoxText(newText) {
+			function changeBoxText(box, newText) {
 				box.text(newText);
 			}
 
-			//////////////////////////////////////////////////////////////////
-			/////////////////// YOUR CODE BELOW HERE /////////////////////////
-			//////////////////////////////////////////////////////////////////
-			
-			// TODO 2 - Variable declarations 
-			
+			// Variables for the first box
+			var positionX = 0;
+			var points = 0;
+			var speed = 1;
 
-			
-			/* 
-			This Function will be called 20 times/second. Each time it is called,
-			it should move the Box to a new location. If the box drifts off the screen
-			turn it around! 
-			*/
+			// Variables for the second box, with different names
+			var positionX2 = 50;
+			var points2 = 0;
+			var speed2 = 1;
+
 			function update() {
-				
+				// First box
+				positionX += speed;
+				moveBoxTo(box, positionX);
+				if(positionX > boardWidth || positionX < 0) {
+					speed *= -1;
+				}
 
+				// Second box
+				positionX2 += speed2;
+				moveBoxTo(box2, positionX2);
+				if(positionX2 > boardWidth || positionX2 < 0) {
+					speed2 *= -1;
+				}
 			};
 
-			/* 
-			This Function will be called each time the box is clicked. Each time it is called,
-			it should increase the points total, increase the speed, and move the box to
-			the left side of the screen.
-			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				points += 1;
+				changeBoxText(box, points);
+				speed += 1;
+			};
 
-
+			function handleBoxClick2() {
+				positionX2 = 0;
+				points2 += 1;
+				changeBoxText(box2, points2);
+				speed2 += 1;
 			};
 		})();
 	</script>
 </body>
 </html>
+
+
